--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -1,5 +1,10 @@
 $base-font-family: 'Heebo';
 $base-font-size: 10px;
 
-$dark: #444;
-$light: #eee;
+
+$color-dark: #444;
+$color-primary: #1B1725;
+$color-secondary: #534B62;
+$color-tertiary: #A499B3;
+$color-accent-light: #927ABF;
+$color-accent-dark: #59468A;
