--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -3,6 +3,7 @@ $base-font-size: 10px;
 
 
 $color-dark: #444;
+$color-blue: #5C5CFF;
 $color-primary: #1B1725;
 $color-secondary: #534B62;
 $color-tertiary: #A499B3;
