--- a/src/global/index.scss
+++ b/src/global/index.scss
@@ -38,7 +38,7 @@ html {
 }
 
 .app button, 
-.app input {
+.app input[type=button] {
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 0.5rem;
